--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@samarth-srivastava/dil",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "dil, in hindi/urdu literal meaning heart, is a DI container in typescript nodejs",
-  "main": "dist/index.js",
+  "main": "",
   "scripts": {
     "start": "node dist/index.js",
     "prestart": "npm run build",
