--- a/pkg/package.json
+++ b/pkg/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@samarth-srivastava/dil",
+  "name": "dil",
   "version": "2.0.4",
   "description": "dil, in hindi/urdu literal meaning heart, is a DI container in typescript nodejs",
   "main": "dist/index.js",
